--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ConnerDeFeo.github.io/PersonalWebsite",
+  "homepage": "https://connerdefeo.com/",
   "name": "personal",
   "version": "0.1.0",
   "private": true,
