--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@tailwindcss/vite": "^4.1.11",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,6 +17,7 @@
     "react-router-dom": "^7.1.0",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.2.3",
+    "tailwindcss": "^4.1.11",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
