--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "vite-react-typescript-starter",
+  "homepage": "https://connerdefeo.github.io/PersonalWebsite/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "deploy": "gh-pages -d dist",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "lucide-react": "^0.344.0",
